tests/snapshots/dbc-cantools/empty_ns.snap
---
source: tests/snapshots.rs
---
[
    Pair {
        rule: file,
        span: Span {
            str: "VERSION \"\"\n\n\nNS_:\n\nBS_:\n\nBU_:\n",
            range: 0..30,
        },
        inner: [
            Pair {
                rule: version,
                span: Span {
                    str: "VERSION \"\"\n",
                    range: 0..11,
                },
                inner: [
                    Pair {
                        rule: quoted_str,
                        span: Span {
                            str: "\"\"",
                            range: 8..10,
                        },
                        inner: [
                            Pair {
                                rule: string,
                                span: Span {
                                    str: "",
                                    range: 9..9,
                                },
                                inner: [],
                            },
                        ],
                    },
                ],
            },
            Pair {
                rule: new_symbols,
                span: Span {
                    str: "NS_:\n\n",
                    range: 13..19,
                },
                inner: [],
            },
            Pair {
                rule: bit_timing,
                span: Span {
                    str: "BS_:\n",
                    range: 19..24,
                },
                inner: [],
            },
            Pair {
                rule: nodes,
                span: Span {
                    str: "BU_:\n",
                    range: 25..30,
                },
                inner: [],
            },
            Pair {
                rule: EOI,
                span: Span {
                    str: "",
                    range: 30..30,
                },
                inner: [],
            },
        ],
    },
]
