tests/snapshots/dbc-cantools/message-dlc-zero.snap
---
source: tests/snapshots.rs
---
[
    Pair {
        rule: file,
        span: Span {
            str: "VERSION \"\"\n\nBS_:\n\nBU_: Node TestNode\n\n\nBO_ 1024 Message1: 0 TestNode\n\n\n\n\n",
            range: 0..73,
        },
        inner: [
            Pair {
                rule: version,
                span: Span {
                    str: "VERSION \"\"\n",
                    range: 0..11,
                },
                inner: [
                    Pair {
                        rule: quoted_str,
                        span: Span {
                            str: "\"\"",
                            range: 8..10,
                        },
                        inner: [
                            Pair {
                                rule: string,
                                span: Span {
                                    str: "",
                                    range: 9..9,
                                },
                                inner: [],
                            },
                        ],
                    },
                ],
            },
            Pair {
                rule: bit_timing,
                span: Span {
                    str: "BS_:\n",
                    range: 12..17,
                },
                inner: [],
            },
            Pair {
                rule: nodes,
                span: Span {
                    str: "BU_: Node TestNode\n\n\n",
                    range: 18..39,
                },
                inner: [
                    Pair {
                        rule: node_name,
                        span: Span {
                            str: "Node",
                            range: 23..27,
                        },
                        inner: [],
                    },
                    Pair {
                        rule: node_name,
                        span: Span {
                            str: "TestNode",
                            range: 28..36,
                        },
                        inner: [],
                    },
                ],
            },
            Pair {
                rule: message,
                span: Span {
                    str: "BO_ 1024 Message1: 0 TestNode",
                    range: 39..68,
                },
                inner: [
                    Pair {
                        rule: msg_var,
                        span: Span {
                            str: "BO_ 1024",
                            range: 39..47,
                        },
                        inner: [
                            Pair {
                                rule: message_id,
                                span: Span {
                                    str: "1024",
                                    range: 43..47,
                                },
                                inner: [],
                            },
                        ],
                    },
                    Pair {
                        rule: message_name,
                        span: Span {
                            str: "Message1",
                            range: 48..56,
                        },
                        inner: [],
                    },
                    Pair {
                        rule: message_size,
                        span: Span {
                            str: "0",
                            range: 58..59,
                        },
                        inner: [],
                    },
                    Pair {
                        rule: transmitter,
                        span: Span {
                            str: "TestNode",
                            range: 60..68,
                        },
                        inner: [],
                    },
                ],
            },
            Pair {
                rule: EOI,
                span: Span {
                    str: "",
                    range: 73..73,
                },
                inner: [],
            },
        ],
    },
]
